PUT and DELETE methods for objects (#88)
Closes issue #11
